--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -133,6 +133,7 @@
       position: absolute;
       bottom: 0;
       left: 0;
+      max-width: 100%;
       padding: $card-padding;
     }
   }
